[tool.poetry]
name = "tbx"
version = "0.1.0"
description = "Torchbox.com"
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2"
wagtail = "~4.1"
psycopg2 = "^2.9.3"
gunicorn = {version = "^20.1.0", optional = true}
wagtail-django-recaptcha = "1.0"
django-pattern-library = "^0.7.0"
whitenoise = "^6.1.0"
dj-database-url = "^0.5.0"
django-redis = "^5.2.0"
django-storages = {extras = ["boto3"], version = "^1.12.3"}
django-permissions-policy = "^4.14.0"
django-referrer-policy = "~1.0"
django-csp = "^3.7"
scout-apm = "^2.25.1"
django-basic-auth-ip-whitelist = "^0.5"
wagtail-accessibility = "^0.2.1"
wagtailfontawesome = "^1.2.1"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.48"
wagtail-purge = {git = "https://github.com/nickmoreton/wagtail-purge", rev = "wagtail-4"}
wagtail-webstories = {git = "https://github.com/nickmoreton/wagtail-webstories", rev = "allow-wagtail-4"}
wagtail-markdown = "^0.10.0"
Wand = "^0.6.10"
sentry-sdk = "^1.9.8"
django-birdbath = "^1.0.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "^2.1.2"
django-extensions = "^3.1.5"
fabric = "~2.5"
stellar = "^0.4.5"

# Linters etc.
black = "^22.3.0"
detect-secrets = "^1.2.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
seed-isort-config = "^2.2.0"

# Documentation
mkdocs = "~1.0"
pudb = "^2020.1"
honcho = "^1.1.0"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '/(migrations|venv)/'
