[tool.poetry]
name = "tbx"
version = "0.1.0"
description = "Torchbox.com"
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "~4.2"
wagtail = "~5.2"
psycopg2 = "^2.9.3"
gunicorn = {version = "^20.1.0", optional = true}
django-pattern-library = "^1.1.0"
whitenoise = "^6.1.0"
dj-database-url = "^0.5.0"
django-redis = "^5.2.0"
django-storages = { extras = ["boto3"], version = "^1.13.2" }
django-permissions-policy = "^4.15.0"
django-referrer-policy = "~1.0"
django-csp = "^3.7"
scout-apm = "^2.25.1"
django-basic-auth-ip-whitelist = "^0.5"
wagtail-accessibility = "^0.2.1"
django-phonenumber-field = "^7.0.2"
phonenumbers = "^8.12.48"
wagtail-purge = "^0.3.0"
wagtail-webstories = "^0.1.1"
wagtail-markdown = "^0.11.1"
django-birdbath = "^1.1.0"
sentry-sdk = "^1.12.1"
Wand = "^0.6.10"
wagtailmedia = "^0.14.5"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "^2.1.2"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.1"
fabric = "~2.5"
stellar = "^0.4.5"
pudb = "^2020.1"
honcho = "^1.1.0"

# Linters etc.
black = "^22.3.0"
detect-secrets = "^1.2.0"
flake8 = "^4.0.1"
isort = "^5.12.0"
pre-commit = "^2.19.0"
seed-isort-config = "^2.2.0"

# Documentation
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
pymdown-extensions = "^10.0.1"

# Testing
wagtail-factories = "^4.1.0"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py39']
exclude = '''
    /(
        .+/migrations
      | venv
      | \.venv
      | node_modules
      | \.git
    )/
'''
