[tool.poetry]
name = "tbx"
version = "0.1.0"
description = "Torchbox.com"
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "~4.2"
wagtail = "~6.0"
psycopg2 = "^2.9.3"
gunicorn = {version = "^20.1.0", optional = true}
django-pattern-library = "^1.1.0"
whitenoise = "^6.6.0"
dj-database-url = "^2.1.0"
django-redis = "^5.4.0"
django-storages = { extras = ["boto3"], version = "^1.14.2" }
django-permissions-policy = "^4.19.0"
django-referrer-policy = "~1.0"
django-csp = "^3.8"
scout-apm = "^3.1.0"
django-basic-auth-ip-whitelist = "^0.5"
wagtail-accessibility = "^2.0.0"
django-phonenumber-field = { extras = ["phonenumbers"], version = "^7.3.0" }
wagtail-purge = "^0.4.0"
wagtail-webstories = "^0.1.1"
wagtail-markdown = "^0.12.1"
django-birdbath = "^1.1.1"
sentry-sdk = "^1.42.0"
Wand = "^0.6.13"
wagtailmedia = "^0.15.1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "^2.1.2"
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"
fabric = "~2.5"
stellar = "^0.4.5"
pudb = "^2020.1"
honcho = "^1.1.0"

# Linters etc.
black = "^22.3.0"
detect-secrets = "^1.2.0"
flake8 = "^4.0.1"
isort = "^5.12.0"
pre-commit = "^2.19.0"
seed-isort-config = "^2.2.0"

# Documentation
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
pymdown-extensions = "^10.0.1"

# Testing
wagtail-factories = "^4.1.0"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py39']
exclude = '''
    /(
        .+/migrations
      | venv
      | \.venv
      | node_modules
      | \.git
    )/
'''
